# AI-Model-Testing-Framework

./: .env.example  .gitignore  DEMO_GUIDE.md  EXAMPLES.md  HUMANIZATION_SUMMARY.md  LICENSE  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
cli/: __init__.py  main.py
examples/: run_tests.py
src/: config.py
src/bias/: __init__.py  detector.py
src/core/: __init__.py  base.py
src/evaluation/: __init__.py  metrics.py
src/llm/: __init__.py  prompts.py  tester.py
src/performance/: __init__.py  tester.py
src/reporting/: __init__.py  generator.py
tests/: test_bias.py  test_evaluation.py  test_llm.py  test_performance.py
